# example-B

./: .travis.yml  CMakeLists.txt  README.md  boo.cpp  boo.hpp  test.cpp
cmake/: FindExampleA.cmake  FindExample_A.cmake
example_B/: boo.cpp
